# contactsApp

./: CMakeLists.txt  Contacts App.pro  Makefile  Makefile.Debug  Makefile.Release  UML.puml  readme.md
src/: CMakeLists.txt  main.cpp
src/libs/: contacts.cpp  prompt.cpp  prompt.h  search.cpp  ui_mainwindow.h  user.h
src/libs/cmds/: add.h  del.h
src/libs/components/mainwindow/: mainwindow.cpp  ui_mainwindow.h
src/libs/components/search/: search_intr.cpp  ui_search_prompt.h  ui_search_results.h
src/libs/components/search_box/: search_box.cpp  ui_search_box.h
